--- a/_config.yml
+++ b/_config.yml
@@ -65,6 +65,7 @@ mailing_lists   : "http://lists.software-carpentry.org"
 flag_size       : 16
 v4_url          : "https://v4.software-carpentry.org"
 releases_io_url : "http://swcarpentry.github.io/swc-releases"
+training_url    : "http://swcarpentry.github.io/instructor-training"
 
 # This is for the editing function in _/includes/improve_content
 # Leave it empty if your site is not on GitHub/GitHub Pages
