--- a/_data/includes.yml
+++ b/_data/includes.yml
@@ -2,16 +2,17 @@ people: [people/adams_james.html, people/adelman_joshua.html, people/ahmadia_a.h
   people/ahmed_arfan.html, people/aiello-lammens_matthew.html, people/ainsley_joshua.html,
   people/aldazabal_inigo.html, people/alexander_harriet.html, people/alleen-willems_russell.html,
   people/allen_james.html, people/alonzi_pete.html, people/alsheikh-hussain_areej.html,
-  people/anderson_c.html, people/anghel_catalina.html, people/antonioletti_mario.html,
-  people/aranda_j.html, people/aruliah_d.html, people/avestruz_camille.html, people/badalamenti_jon.html,
-  people/bae_sung.html, people/bahlai_christie.html, people/bajcz_alex.html, people/banaszkiewicz_piotr.html,
-  people/barmby_pauline.html, people/barneche_diego.html, people/barr_ewan.html, people/bast_radovan.html,
-  people/batut_berenice.html, people/bauer_dana.html, people/bayer_p.html, people/beagrie_robert.html,
-  people/beitey_david.html, people/bekolay_trevor.html, people/belcaid_mahdi.html,
-  people/belikov_evgenij.html, people/bell_jason.html, people/bennett_n.html, people/berghold_jared.html,
-  people/bergman_casey.html, people/berry_michelle.html, people/blakk_lukas.html,
-  people/blischak_j.html, people/boettiger_carl.html, people/boissonneault_maxime.html,
-  people/bonnie_jessica.html, people/bonsma_madeleine.html, people/boocock_james.html,
+  people/anderson_c.html, people/anghel_catalina.html, people/ankenbrand_markus.html,
+  people/antonioletti_mario.html, people/aranda_j.html, people/aruliah_d.html, people/avestruz_camille.html,
+  people/badalamenti_jon.html, people/bae_sung.html, people/bahlai_christie.html,
+  people/bajcz_alex.html, people/ballinger_thomas.html, people/baltzell_asher.html,
+  people/banaszkiewicz_piotr.html, people/barmby_pauline.html, people/barneche_diego.html,
+  people/barr_ewan.html, people/bast_radovan.html, people/batut_berenice.html, people/bauer_dana.html,
+  people/bayer_p.html, people/beagrie_robert.html, people/beitey_david.html, people/bekolay_trevor.html,
+  people/belcaid_mahdi.html, people/belikov_evgenij.html, people/bell_jason.html,
+  people/bennett_n.html, people/berghold_jared.html, people/bergman_casey.html, people/berry_michelle.html,
+  people/blakk_lukas.html, people/blischak_j.html, people/boettiger_carl.html, people/boissonneault_maxime.html,
+  people/bond_s.html, people/bonnie_jessica.html, people/bonsma_madeleine.html, people/boocock_james.html,
   people/bostroem_a.html, people/boughton_andrew.html, people/bouquin_daina.html,
   people/bowman_ross.html, people/boyle_amy.html, people/bray_e.html, people/brin_lindsay.html,
   people/broman_karl.html, people/brown_amy.html, people/brown_ct.html, people/brown_kyler.html,
@@ -33,22 +34,22 @@ people: [people/adams_james.html, people/adelman_joshua.html, people/ahmadia_a.h
   people/davenport_e.html, people/davey_rob.html, people/davis_m.html, people/davis_neal.html,
   people/debo_christof.html, people/demichelis_raffaella.html, people/dennis_tim.html,
   people/derrick_james.html, people/desjardins_james.html, people/devenyi_gabriel.html,
-  people/devlin_catherine.html, people/diaz-gil_andres.html, people/dickenson_matt.html,
-  people/dickson_r.html, people/diong_joanna.html, people/doehle_phillip.html, people/dolson_emily.html,
-  people/dotson_david.html, people/doyle_kimberly.html, people/droop_alastair.html,
-  people/duchesne_laurent.html, people/duckles_jonah.html, people/duffy_meghan.html,
-  people/duncan_susan.html, people/earl_stevan.html, people/eddelbuettel_dirk.html,
-  people/ely_j.html, people/emonet_remi.html, people/erlich_aaron.html, people/etxaniz_oier.html,
-  people/evans_andy.html, people/eyers_david.html, people/faghirhagh_varda.html, people/falster_daniel.html,
-  people/farsarakis_emmanouil.html, people/fauber_bennet.html, people/fei_xu.html,
-  people/ferguson_angus.html, people/fernandes_filipe.html, people/fernandez-valverde_selene.html,
+  people/devisetty_upendra-kumar.html, people/devlin_catherine.html, people/diaz-gil_andres.html,
+  people/dickenson_matt.html, people/dickson_r.html, people/didion_john.html, people/diong_joanna.html,
+  people/doehle_phillip.html, people/dolson_emily.html, people/dotson_david.html,
+  people/doyle_kimberly.html, people/droop_alastair.html, people/duchesne_laurent.html,
+  people/duckles_jonah.html, people/duffy_meghan.html, people/duncan_susan.html, people/earl_stevan.html,
+  people/eddelbuettel_dirk.html, people/ely_j.html, people/emonet_remi.html, people/erlich_aaron.html,
+  people/etxaniz_oier.html, people/evans_andy.html, people/eyers_david.html, people/faghirhagh_varda.html,
+  people/falster_daniel.html, people/farsarakis_emmanouil.html, people/fauber_bennet.html,
+  people/fei_xu.html, people/ferguson_angus.html, people/fernandes_filipe.html, people/fernandez-valverde_selene.html,
   people/figueira_l.html, people/fishman_dmytro.html, people/fitzjohn_rich.html, people/flaxman_abraham.html,
   people/fonnesbeck_chris.html, people/fontenelle_hugues.html, people/ford_jes.html,
   people/ford_talitha.html, people/forstner_konrad.html, people/fournier_auriel.html,
   people/fowler_philip.html, people/friedline_chris.html, people/fu_zhuo.html, people/fucile_geoffrey.html,
   people/furstenau_tara.html, people/gacenga_francis.html, people/gan_emilia.html,
   people/garcia-algarra_javier.html, people/garcia-gutierrez_leonor.html, people/garcia_julian.html,
-  people/garoutte_aaron.html, people/gates_chris.html, people/gatto_laurent.html,
+  people/gardner_paul.html, people/garoutte_aaron.html, people/gates_chris.html, people/gatto_laurent.html,
   people/geiger_stuart.html, people/geldenhuis_andre.html, people/ghaffari_noushin.html,
   people/gibling_heather.html, people/gibson_molly.html, people/goble_c.html, people/gogoglou_antonia.html,
   people/gonzalez_ivan.html, people/gorman_gerard.html, people/graham_laura.html,
@@ -86,10 +87,10 @@ people: [people/adams_james.html, people/adelman_joshua.html, people/ahmadia_a.h
   people/magle_tobin.html, people/manhaes-savio_alexandre.html, people/mansour_tamer.html,
   people/marconi_sergio.html, people/marek_diana.html, people/marini_camille.html,
   people/martinez_paula.html, people/marwaha_kunal.html, people/marwick_ben.html,
-  people/mashchenko_sergey.html, people/masoud-ansari_sina.html, people/mayer_fernando.html,
-  people/mcclatchy_sue.html, people/mcclung_bill.html, people/mcdonald_daniel.html,
-  people/mcgough_s.html, people/mcgoveran_catherine.html, people/mckay_sheldon.html,
-  people/mckellar_j.html, people/mckinley_maria.html, people/mclean_cameron.html,
+  people/masakuna_jordan.html, people/mashchenko_sergey.html, people/masoud-ansari_sina.html,
+  people/may_ryan.html, people/mayer_fernando.html, people/mcclatchy_sue.html, people/mcclung_bill.html,
+  people/mcdonald_daniel.html, people/mcgough_s.html, people/mcgoveran_catherine.html,
+  people/mckay_sheldon.html, people/mckellar_j.html, people/mckinley_maria.html, people/mclean_cameron.html,
   people/mctavish_ej.html, people/medrela_krzysztof.html, people/meister_sarah.html,
   people/menegon_stefano.html, people/metz_jeremy.html, people/michael_lauren.html,
   people/michnowicz_s.html, people/michonneau_francois.html, people/mickley_james.html,
@@ -104,29 +105,30 @@ people: [people/adams_james.html, people/adelman_joshua.html, people/ahmadia_a.h
   people/norris_timothy.html, people/nunez-iglesias_juan.html, people/ocais_alan.html,
   people/odell_allison-jai.html, people/ogrady_tina.html, people/oleary_aaron.html,
   people/oliver_jeffrey.html, people/olson_r.html, people/olsson_catherine.html, people/orendt_anita.html,
-  people/orr_adam.html, people/ory_j.html, people/palamartchouk_kirill.html, people/palm_francisco.html,
-  people/paulo_martin.html, people/pawlik_a.html, people/pearson_john.html, people/peek_ryan.html,
-  people/pell_j.html, people/perez-suarez_david.html, people/perez_f.html, people/perignon_mariela.html,
-  people/perrett_heidi.html, people/perry_adam.html, people/peru_giacomo.html, people/petre_m.html,
-  people/pfenninger_s.html, people/pinska_adrianna.html, people/pipitone_j.html, people/pitchers_w.html,
-  people/plumbley_m.html, people/pollard_tom.html, people/pomorski_pawel.html, people/preeyanon_likit.html,
-  people/pritchard_leighton.html, people/profiti_giuseppe.html, people/provencher_francoise.html,
-  people/psomopoulos_fotis.html, people/pue_s.html, people/ram_k.html, people/ramalingam_saravanan.html,
-  people/ramos-musalem_ana-karina.html, people/ranjard_louis.html, people/rawat_rohit.html,
-  people/razoumov_alex.html, people/read_emily.html, people/rice_timothy.html, people/richie-halford_adam.html,
-  people/riemer_kristina.html, people/riley_janet.html, people/rio_david.html, people/ritchie_scott.html,
-  people/roberts_leah.html, people/robinson_james.html, people/robinson_natalie.html,
-  people/robinson_rosario.html, people/rohl_andrew.html, people/rokem_a.html, people/rosenfield_phil.html,
-  people/ross_noam.html, people/rowell_bill.html, people/rugis_john.html, people/ruttley_m.html,
-  people/sadjadi_seyed-mahdi.html, people/sampath_ramesh.html, people/sane_maneesha.html,
+  people/orr_adam.html, people/ory_j.html, people/otsuji_reid.html, people/palamartchouk_kirill.html,
+  people/palm_francisco.html, people/paulo_martin.html, people/pawlik_a.html, people/pearson_john.html,
+  people/peek_ryan.html, people/pell_j.html, people/perez-suarez_david.html, people/perez_f.html,
+  people/perignon_mariela.html, people/perrett_heidi.html, people/perry_adam.html,
+  people/peru_giacomo.html, people/petre_m.html, people/pfenninger_s.html, people/pinska_adrianna.html,
+  people/pipitone_j.html, people/pitchers_w.html, people/plumbley_m.html, people/pollard_tom.html,
+  people/pomorski_pawel.html, people/preeyanon_likit.html, people/pritchard_leighton.html,
+  people/profiti_giuseppe.html, people/provencher_francoise.html, people/psomopoulos_fotis.html,
+  people/pue_s.html, people/ram_k.html, people/ramalingam_saravanan.html, people/ramos-musalem_ana-karina.html,
+  people/ranjard_louis.html, people/rawat_rohit.html, people/razoumov_alex.html, people/read_emily.html,
+  people/rice_timothy.html, people/richie-halford_adam.html, people/riemer_kristina.html,
+  people/riley_janet.html, people/rio_david.html, people/ritchie_scott.html, people/roberts_leah.html,
+  people/robinson_james.html, people/robinson_natalie.html, people/robinson_rosario.html,
+  people/rohl_andrew.html, people/rokem_a.html, people/rosenfield_phil.html, people/ross_noam.html,
+  people/rowell_bill.html, people/rugis_john.html, people/ruttley_m.html, people/sadjadi_seyed-mahdi.html,
+  people/sampath_ramesh.html, people/sanders_shane.html, people/sane_maneesha.html,
   people/sarahan_michael.html, people/schilling_martin.html, people/schloss_pat.html,
   people/schmeier_sebastian.html, people/schmidt_marian.html, people/schneider_juliane.html,
   people/schossau_j.html, people/schwartz_rachel.html, people/scopatz_a.html, people/selik_m.html,
   people/senyondo_henry.html, people/serra_neem.html, people/shambaugh_brent.html,
   people/sharan_malvika.html, people/shelton_j.html, people/shelton_jennifer.html,
   people/sheneman_leigh.html, people/sherman_jason.html, people/shih_yu-ching.html,
-  people/shkurti_ardita.html, people/silva_raniere.html, people/simpkin_sarah.html,
-  people/simpson_jack.html, people/simpson_john.html, people/slaybaugh_rachel.html,
+  people/shiklomanov_alexey.html, people/shkurti_ardita.html, people/silva_raniere.html,
+  people/simpkin_sarah.html, people/simpson_jack.html, people/simpson_john.html, people/slaybaugh_rachel.html,
   people/sloggett_clare.html, people/small_luc.html, people/smith_allison.html, people/smith_byron.html,
   people/smith_daniel.html, people/smith_j.html, people/smithyman_brendan.html, people/smorul_mike.html,
   people/soares-siqueira_abel.html, people/soderberg_courtney.html, people/soontiens_nancy.html,
@@ -159,11 +161,11 @@ people: [people/adams_james.html, people/adelman_joshua.html, people/ahmadia_a.h
   people/whitlock_alexander.html, people/wijeratne_asela.html, people/wilber_mark.html,
   people/wilkerson_chandler.html, people/williams_jason.html, people/williams_l.html,
   people/williams_ryan.html, people/williamson_evan.html, people/williford_anna.html,
-  people/willmore_frank.html, people/wilson_g.html, people/wilson_p.html, people/winston_donald.html,
-  people/winton_jared.html, people/woo_kara.html, people/woods_c.html, people/wright_thomas.html,
-  people/wu_steven.html, people/yang_fan.html, people/yang_hsi-kai.html, people/young_lynn.html,
-  people/zakkaroff_constantine.html, people/zhang_jingchao.html, people/zhang_qp.html,
-  people/zimmerman_naupaka.html, people/zito_t.html, people/zonca_andrea.html]
+  people/willmore_frank.html, people/wilson_aidan.html, people/wilson_g.html, people/wilson_p.html,
+  people/winston_donald.html, people/winton_jared.html, people/woo_kara.html, people/woods_c.html,
+  people/wright_thomas.html, people/wu_steven.html, people/yang_fan.html, people/yang_hsi-kai.html,
+  people/young_lynn.html, people/zakkaroff_constantine.html, people/zhang_jingchao.html,
+  people/zhang_qp.html, people/zimmerman_naupaka.html, people/zito_t.html, people/zonca_andrea.html]
 projects: [projects/active-papers.html, projects/archer.html, projects/astropy.html,
   projects/biostars.html, projects/cyclus.html, projects/ecodata-retriever.html, projects/eff-phys.html,
   projects/gap.html, projects/genomics-virtual-lab.html, projects/git-rdm.html, projects/ipfs.html,
